<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeamWoodpecker-Project2</string>
    <string name="start_game">Start Game</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_selection">SelectionActivity</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="game_title">The Flocking Game</string>
    <string name="confirm_selection">Confirm Selection</string>
    <string name="bird_placement_info">Place your bird %s</string>
    <string name="parrot_accessibility">Parrot</string>
    <string name="title_activity_final_score">Final Score</string>
    <string name="player_wins">%s Wins!</string>
    <string name="birds_placed">%d total birds placed!</string>
    <string name="new_game">New Game</string>
    <string name="place_bird">Place Bird</string>
    <string name="player_select">Select Your Bird!</string>
    <string name="game_state">game_state</string>
    <string name="seagull_accessibility">Seagull</string>
    <string name="view_instructions">Instructions</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_text">To play, both players enter their names and then click the Start Game button.\n\nThe game then begins a round. A round consists of each player consecutively selecting a bird they want to place. To select a bird, tap on the bird and it will be outlined. To confirm the selection press the Confirm Selection button and then pass the device to the other player.\n\nBoth players then consecutively try to place their birds without touching the other birds on the play area. To place a bird, drag on the screen to position the bird and then press the Place Bird button to finalize the position.\n\nA new round then begins, but the order the players go in reverses. The game continues until one of the players overlap a bird with their placement. The player to overlap another bird first loses the game.</string>
    <string name="no_bird_toast">Please select a bird!</string>
    <string name="title_activity_await_players">AwaitPlayers</string>
    <string name="login">Log In</string>
    <string name="please_wait">Please wait while the other player connects to the game...</string>
    <string name="quit_session">Quit Session (make menu option)</string>
    <string name="create_user">Create User</string>
    <string name="remember">Remember me on this device</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_await">AwaitActivity</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="create_text">Enter a new Username and a Password</string>
    <string name="new_username">New Username:</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="create_user_button">Create New User</string>
    <string name="password_mismatch_toast">The passwords entered do not match</string>
    <string name="user_exists_toast">Failed to create user: user name already used</string>
    <string name="create_user_failed_generic_toast">Failed to create user</string>
    <string name="user_does_not_exist_toast">Failed to login: invalid user name</string>
    <string name="incorrect_password_toast">Failed to login: incorrect password</string>
    <string name="login_failed_generic_toast">Failed to login</string>
    <string name="opponent_name">Opponent</string>
    <string name="title_activity_wait_on_update">WaitOnUpdateActivity</string>
    <string name="waiting_title">Waiting on Player</string>
    <string name="waiting_text">Waiting for your opponent to play...</string>
    <string name="quit_game">Quit Game</string>
    <string name="update_game_connection_failed">Failed to update game</string>
    <string name="title_activity_wait_on_select">WaitOnSelectActivity</string>
    <string name="menu_Quit">Quit Connection</string>
    <string name="opponent_quit">No game: your opponent has quit</string>

</resources>
