<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.msu.stanospa.teamgoldfinch_project1.CreateUserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_text"
        android:id="@+id/create_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_username"
        android:id="@+id/new_username_text"
        android:textSize="24sp"
        android:layout_alignBottom="@+id/newUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newUsername"
        android:layout_below="@+id/create_text"
        android:layout_toRightOf="@+id/new_username_text"
        android:layout_toEndOf="@+id/new_username_text"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_password"
        android:id="@+id/new_password_text"
        android:textSize="24sp"
        android:layout_alignBottom="@+id/newPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newPassword"
        android:layout_below="@+id/newUsername"
        android:layout_toRightOf="@+id/new_password_text"
        android:layout_toEndOf="@+id/new_password_text"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/confirm_password"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:layout_alignBottom="@+id/confirmPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPassword"
        android:layout_below="@+id/newPassword"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user_button"
        android:id="@+id/createButton"
        android:layout_below="@+id/confirmPassword"
        android:layout_centerHorizontal="true"
        android:onClick="onCreateNewUser"
        android:textSize="32sp" />
</RelativeLayout>
